--- a/src/Styles/globals.css
+++ b/src/Styles/globals.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.svg svg {
+  height: 22px;
+  width: 22px;
+  margin-right: 10px;
+}
